NULL =

icondir   = $(datadir)/icons/hicolor/48x48/apps
icon_DATA =				\
	panel-force-quit.png		\
	cdeappmenu.png			\
	gnome-clock.png			\
	gnome-gegl2-2.png		\
	gnome-gegl2.png			\
	gnome-gegl.png			\
	gnome-run.png			\
	gnome-screenshot.png		\
	gnome-main-menu.png		\
	$(NULL)

EXTRA_DIST = $(icon_DATA)
