NULL =

gegldir   = $(datadir)/pixmaps
gegl_DATA = 				\
	gnome-gegl2-2.png		\
	gnome-gegl2.png			\
	gnome-gegl.png			\
	$(NULL)

icondir   = $(datadir)/icons/hicolor/48x48/apps
icon_DATA =				\
	panel-force-quit.png		\
	gnome-run.png			\
	gnome-main-menu.png		\
	$(NULL)

EXTRA_DIST = $(icon_DATA) $(gegl_DATA)
