NULL =

gegldir   = $(datadir)/gnome/panel/pixmaps
gegl_DATA = 				\
	gnome-gegl2-2.png		\
	gnome-gegl2.png			\
	$(NULL)

icondir   = $(datadir)/icons/hicolor/48x48/apps
icon_DATA =				\
	panel-force-quit.png		\
	gnome-gegl.png			\
	gnome-main-menu.png		\
	$(NULL)

EXTRA_DIST = $(icon_DATA) $(gegl_DATA)
